[gd_scene load_steps=14 format=3 uid="uid://b8s6yx22853e1"]

[ext_resource type="Texture2D" uid="uid://brlvp5en8xam5" path="res://mystic_woods/sprites/characters/slime.png" id="1_cuoqx"]
[ext_resource type="Script" path="res://slimes.gd" id="1_npxhp"]
[ext_resource type="PackedScene" uid="uid://bcul8riua65lt" path="res://enemy_projectile.tscn" id="2_qdsaa"]

[sub_resource type="Animation" id="Animation_vhgg5"]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [14, 14, 15, 20]
}

[sub_resource type="Animation" id="Animation_atpmm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x6en6"]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}

[sub_resource type="Animation" id="Animation_8nyjj"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [28, 32]
}

[sub_resource type="Animation" id="Animation_1wvf5"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_1q5m1"]
resource_name = "movement"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [7, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iioi4"]
_data = {
"Attack": SubResource("Animation_vhgg5"),
"RESET": SubResource("Animation_atpmm"),
"damage": SubResource("Animation_x6en6"),
"death": SubResource("Animation_8nyjj"),
"idle": SubResource("Animation_1wvf5"),
"movement": SubResource("Animation_1q5m1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71xwu"]
size = Vector2(12, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_8n3dv"]
radius = 90.0056

[sub_resource type="CircleShape2D" id="CircleShape2D_cye08"]
radius = 22.2036

[node name="Slimes" type="CharacterBody2D" groups=["enemy", "minimap_objects"]]
collision_layer = 8
script = ExtResource("1_npxhp")
projectile = ExtResource("2_qdsaa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_cuoqx")
hframes = 7
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iioi4")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_71xwu")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -8.0
text = "IDLE"

[node name="Detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_8n3dv")

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_cye08")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
